--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <h1 class="logo">Sem Ruído</h1>
             <span class="brand-sub">Briefing Financeiro Diário</span>
             <div id="about-box">
-                O Sem Ruído utiliza modelos de linguagem para selecionar e resumir diariamente cinco notícias relevantes do mercado financeiro, atualizadas todos os dias às 05:00.
+                5 notícias relevantes do mercado financeiro, curadas e resumidas por inteligência artificial. Todo dia, às 05:00.
             </div>
         </header>
 
@@ -470,3 +470,4 @@
     </script>
 </body>
 </html>
+
