--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div class="container">
         <header id="main-header">
             <div class="top-nav">
-                <span class="nav-link" onclick="toggleAbout()">Info</span>
+                <span class="nav-link" onclick="toggleAbout()">Sobre</span>
                 <div>
                     <span class="nav-link" id="theme-text" onclick="toggleTheme()">Modo Escuro</span>
                 </div>
@@ -600,4 +600,5 @@
     </script>
 </body>
 </html>
+
 
