--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <div class="container">
         <header id="main-header">
             <div class="top-nav">
-                <span class="nav-link" onclick="toggleAbout()">Info</span>
+                <span class="nav-link" onclick="toggleAbout()">Sobre</span>
                 <div>
                     <span class="nav-link" id="theme-text" onclick="toggleTheme()">Modo Escuro</span>
                 </div>
@@ -623,3 +623,4 @@
     </script>
 </body>
 </html>
+
